<!-- Copyright 2013 TeddyTab llc. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/small_padding"
        android:text="@string/title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/titleLabel"
        android:ems="10"
        android:inputType="textCapWords" />

    <RadioGroup
        android:id="@+id/orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_padding"
            android:text="@string/landscape" />

        <RadioButton
            android:id="@+id/portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_padding"
            android:text="@string/portrait" />

        <RadioButton
            android:id="@+id/flexible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/flexible" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/firstPageIsAnchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/orientation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/first_page_is_anchor"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <CheckBox
        android:id="@+id/animatedAnchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/firstPageIsAnchor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/animated_anchor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/animatedAnchor"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textCapWords" />

    <ListView
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/add"
        android:layout_gravity="fill_horizontal" >
    </ListView>

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tag"
        android:layout_toRightOf="@+id/tag"
        android:src="@drawable/ic_add_tag" />

</RelativeLayout>