<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/book_properties"
                style="@style/AccordionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/YellowBack"
                android:text="@string/book" />

            <TextView
                android:id="@+id/page_list"
                style="@style/AccordionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GreenBack"
                android:text="@string/pages" />

            <TextView
                android:id="@+id/object_list"
                style="@style/AccordionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BlueBack"
                android:text="@string/objects" />

            <TextView
                android:id="@+id/animation_list"
                style="@style/AccordionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/PurpleBack"
                android:text="@string/animations" />

            <TextView
                android:id="@+id/event_list"
                style="@style/AccordionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/RedBack"
                android:text="@string/events" />

            <RelativeLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/titleText"
                    style="@style/AccordionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true" />
                <Button
                    android:id="@+id/paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_menu_paste"
                    android:text="image1Move1"/>
                <ImageButton
                    android:id="@+id/cut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/copy"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_menu_delete"/>
                <ImageButton
                    android:id="@+id/copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_menu_copy"/>
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/details"
                style="@style/DrawerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:src="@drawable/ic_handle" />

</RelativeLayout>